FIX form field name

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <label for="contact-form:html">
                 Content
             </label>
-            <textarea name="content" required id="contact-form:html"></textarea>
+            <textarea name="html" required id="contact-form:html"></textarea>
         </div>
         <hr>
         <button type="submit">
